@@ -28,6 +28,8 @@ documents those changes that are of interest to users and admins.
     Grytsenko (Massive Solutions Limited).
  -- Add DefMemPerCPU/Node and MaxMemPerCPU/Node to partition configuration.
     This improves flexibility when gang scheduling only specific partitions.
+ -- Added new enums to print out when a job is held by a QOS instead of an
+    association limit.
 
 * Changes in SLURM 2.3.0.pre6
 =============================
